@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3640 2003/10/05 07:07:18 jlam Exp $
+$NetBSD: CHANGES,v 1.3641 2003/10/05 07:12:21 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -4075,3 +4075,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated ja-vfxdvik to 22.40v.j1.14nb2 [kei 2003-10-05]
 	Updated yatsvrs to 5.00.6nb1 [taca 2003-10-05]
 	Updated perl58 to 5.8.1 [jlam 2003-10-05]
+	Updated vmware3 to 3.2.1pl1 [jdolecek 2003-10-05]
